src/k8s/platform/configuration/traefik/traefik-edge-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-edge-nodeport
  namespace: kube-system
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: websecure
      port: 443
      targetPort: websecure
      nodePort: 31443
